[package]
name = "wvm-blobscan"
version = "1.0.0"
edition = "2021"

[dependencies]
alloy-chains = "0.1"
alloy-primitives = { version = "0.8", default-features = false, features = [
    "std",
    "serde",
] }
alloy-rpc-types-eth = "0.4"
alloy-eips = "0.4"
alloy-serde = "0.4"

foundry-blob-explorers = {git = "https://github.com/charmful0x/block-explorers.git"}
tokio = { version = "1.41.1", features = ["full"]}
ethers = {version = "2.0.14", features = ["ws"]}
eyre = "0.6.12"
brotli = "7.0.0"
serde = "1.0.215"
serde_json = "1.0.133"
planetscale-driver = "0.5.1"
dotenv = "0.15.0"
anyhow = "1.0.93"
shuttle-runtime = "0.50.0"
shuttle-axum = "0.50.0"
axum = "0.7.9"
reqwest = "0.12.12"
